--- a/index.html
+++ b/index.html
@@ -68,6 +68,90 @@
       <!-- 밑으로 스크롤 시 화면 옅어지는 이벤트 추가하기 -->
     </article>
 
+    <article id="about-me">
+      <div class="AboutMe_container Container">
+        <div class="SectionTitle AboutMe_title">
+          <div class="SectionTitle_text">ABOUT ME</div>
+        </div>
+
+        <div class="AboutMe_infos">
+          <div class="AboutMe_info-wrapper">
+            <div class="AboutMe_info">
+              <div class="AboutMe_icon">
+                <i class="fas fa-user-astronaut AboutMe_icon-img"></i>
+              </div>
+              <div class="AboutMe_field">
+                <div class="AboutMe_field-label">이름</div>
+                <div class="AboutMe_field-value">강현준</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="AboutMe_info-wrapper">
+            <div class="AboutMe_info">
+              <div class="AboutMe_icon">
+                <i class="fas fa-calendar AboutMe_icon-img"></i>
+              </div>
+              <div class="AboutMe_field">
+                <div class="AboutMe_field-label">생년월일</div>
+                <div class="AboutMe_field-value">95.12.30</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="AboutMe_info-wrapper">
+            <div class="AboutMe_info">
+              <div class="AboutMe_icon">
+                <i class="fas fa-satellite AboutMe_icon-img"></i>
+              </div>
+              <div class="AboutMe_field">
+                <div class="AboutMe_field-label">주소지</div>
+                <div class="AboutMe_field-value">부산광역시 해운대구</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="AboutMe_info-wrapper">
+            <div class="AboutMe_info">
+              <div class="AboutMe_icon">
+                <i class="fas fa-phone-alt AboutMe_icon-img"></i>
+              </div>
+              <div class="AboutMe_field">
+                <div class="AboutMe_field-label">연락처</div>
+                <div class="AboutMe_field-value">010-9928-5147</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="AboutMe_info-wrapper">
+            <div class="AboutMe_info">
+              <div class="AboutMe_icon">
+                <i class="fas fa-satellite-dish AboutMe_icon-img"></i>
+              </div>
+              <div class="AboutMe_field">
+                <div class="AboutMe_field-label">이메일</div>
+                <div class="AboutMe_field-value">rkdguswns0803@gmail.com</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="AboutMe_info-wrapper">
+            <div class="AboutMe_info">
+              <div class="AboutMe_icon">
+                <i class="fas fa-pencil-alt AboutMe_icon-img"></i>
+              </div>
+              <div class="AboutMe_field">
+                <div class="AboutMe_field-label">학력</div>
+                <div class="AboutMe_field-value">
+                  부산가톨릭대학교<br />(컴퓨터공학과)
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </article>
+
     <script src="main.js"></script>
   </body>
 </html>
