--- a/index.html
+++ b/index.html
@@ -152,6 +152,56 @@
       </div>
     </article>
 
+    <article id="skills">
+      <div class="Skills_container Container">
+        <div class="SectionTitle Skills_title">
+          <div class="SectionTitle_text">SKILLS</div>
+        </div>
+
+        <div class="Skills_tech-stacks"></div>
+      </div>
+    </article>
+
+    <article id="archiving">
+      <div class="Archiving_container Container">
+        <div class="Archiving_title SectionTitle">
+          <div class="SectionTitle_text">ARCHIVING</div>
+        </div>
+      </div>
+    </article>
+
+    <article id="projects">
+      <div class="Projects_container Container">
+        <div class="SectionTitle Projects_title">
+          <div class="SectionTitle_text">PROJECTS</div>
+        </div>
+      </div>
+    </article>
+
+    <footer id="footer">
+      <div class="Footer_icons">
+        <!-- 링크연결하기 -->
+        <div class="Footer_icon-wrapper github">
+          <i class="fab fa-github Footer_icon"> </i>
+        </div>
+
+        <div class="Footer_icon-wrapper discord">
+          <i class="fab fa-discord Footer_icon discord-icon"></i>
+        </div>
+
+        <div class="Footer_icon-wrapper instagram">
+          <i class="fab fa-instagram Footer_icon"></i>
+        </div>
+
+        <div class="Footer_icon-wrapper facebook">
+          <i class="fab fa-facebook Footer_icon"></i>
+        </div>
+      </div>
+      <div class="Footer_copyright">
+        © 2023. Kang Hyeon June. All rights reserved.
+      </div>
+    </footer>
+
     <script src="main.js"></script>
   </body>
 </html>
