--- a/index.html
+++ b/index.html
@@ -167,6 +167,27 @@
         <div class="Archiving_title SectionTitle">
           <div class="SectionTitle_text">ARCHIVING</div>
         </div>
+
+        <div class="Archiving_git-hub-container">
+          <a href="https://github.com/guswns951230" class="Archiving_git-hub">
+            <div class="Archiving_img-wrapper">
+              <img
+                class="Archiving_img"
+                src="/images/Archiving_Github.png"
+                alt="github logo"
+              />
+            </div>
+            <div class="Archiving_url">github.com/guswns951230</div>
+            <div class="Archiving_description">
+              <p><b>소스 코드 저장소</b>입니다.</p>
+              <ul>
+                <li>과거 프로젝트, 프로그램의 소스 코드</li>
+                <li>코딩 연습을 위해 끄적이던 소스 코드</li>
+                <li>코딩 교육에서 수강한 수업들의 코딩 과제 소스 코드</li>
+              </ul>
+            </div>
+          </a>
+        </div>
       </div>
     </article>
 
