--- a/index.html
+++ b/index.html
@@ -158,7 +158,22 @@
           <div class="SectionTitle_text">SKILLS</div>
         </div>
 
-        <div class="Skills_tech-stacks"></div>
+        <div class="Skills_tech-stacks-container">
+          <div class="Skills_tech-stacks">
+            <div class="Skills_stacks-title">Frontend</div>
+            <img src="" alt="" class="Skills_img" />
+          </div>
+
+          <div class="Skills_tech-stacks">
+            <div class="Skills_stacks-title">Version Control</div>
+            <img src="" alt="" class="Skills_img" />
+          </div>
+
+          <div class="Skills_tech-stacks">
+            <div class="Skills_stacks-title">Backend</div>
+            <img src="" alt="" class="Skills_img" />
+          </div>
+        </div>
       </div>
     </article>
 
