--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <article id="home">
       <img class="Home_img1" src="/images/homeimage2.png" alt="homeimage" />
-      <div class="Home_container Container">
+      <div class="Home_container">
         <div class="Home_avatar"></div>
 
         <div class="Home_title">
@@ -162,16 +162,31 @@
           <div class="Skills_tech-stacks">
             <div class="Skills_stacks-title">Frontend</div>
             <img src="" alt="" class="Skills_img" />
+            <div>
+              html css js <br />
+              react <br />
+              redux <br />
+              ant design <br />
+              Mui
+            </div>
+          </div>
+
+          <div class="Skills_tech-stacks">
+            <div class="Skills_stacks-title">Deployment</div>
+            <img src="" alt="" class="Skills_img" />
+            <div>
+              github-page <br />
+              netlify
+            </div>
           </div>
 
           <div class="Skills_tech-stacks">
             <div class="Skills_stacks-title">Version Control</div>
             <img src="" alt="" class="Skills_img" />
-          </div>
-
-          <div class="Skills_tech-stacks">
-            <div class="Skills_stacks-title">Backend</div>
-            <img src="" alt="" class="Skills_img" />
+            <div>
+              git <br />
+              github
+            </div>
           </div>
         </div>
       </div>
@@ -209,7 +224,199 @@
     <article id="projects">
       <div class="Projects_container Container">
         <div class="SectionTitle Projects_title">
-          <div class="SectionTitle_text">PROJECTS</div>
+          <div class="SectionTitle_text Projects_section-title">PROJECTS</div>
+        </div>
+
+        <div class="Projects_Projects">
+          <div class="Projects_project">
+            <div class="Projects_project-title">Marcufali 웹사이트</div>
+            <div class="Projects_project-period">
+              2022.10
+              <span>(1人 개인 프로젝트)</span>
+            </div>
+            <div class="Projects_project-info">
+              <!-- display flex 적용 -->
+              <div class="Projects_project-img-wrapper">
+                <img
+                  class="Projects_project-img"
+                  src="images/project-main-img-marcufali.png"
+                  alt=""
+                />
+              </div>
+              <div class="Projects_project-descriptions">
+                <div class="Projects_project-main-description">
+                  프로젝트 메인 소개글
+                </div>
+
+                <div class="Projects_project-description">
+                  <!-- 각 요소는 display : inline-block -->
+                  <div class="Projects_project-label">주요기능</div>
+                  <div class="Projects_project-value">
+                    요금 안내, 문의 방법, 오시는 길(naver 지도), 디자이너 안내,
+                    진행 중인 이벤트, 예약
+                  </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <!-- 각 요소는 display : inline-block -->
+                  <div class="Projects_project-label">GitHub</div>
+                  <div class="Projects_project-value">
+                    <a
+                      class="Projects_url"
+                      href="https://github.com/guswns951230/React-project"
+                      >https://github.com/guswns951230/React-project</a
+                    >
+                  </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <!-- 각 요소는 display : inline-block -->
+                  <div class="Projects_project-label">URL</div>
+                  <div class="Projects_project-value">
+                    <a
+                      class="Projects_url"
+                      href="https://guswns951230.github.io/React-project/"
+                      >https://guswns951230.github.io/React-project/</a
+                    >
+                  </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <!-- 각 요소는 display : inline-block -->
+                  <div class="Projects_project-label">Frontend</div>
+                  <div class="Projects_project-value">
+                    frontend에 사용된 기술
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="Projects_project">
+            <div class="Projects_project-title">모두의 티셔츠 MOTI</div>
+            <div class="Projects_project-period">
+              2022.12 ~ 2023.01
+              <span>(5人 팀 프로젝트)</span>
+            </div>
+            <div class="Projects_project-info">
+              <!-- display flex 적용 -->
+              <div class="Projects_project-img-wrapper">
+                <img
+                  class="Projects_project-img"
+                  src="images/project-main-img-moti.png"
+                  alt=""
+                />
+              </div>
+              <div class="Projects_project-descriptions">
+                <div class="Projects_project-main-description">
+                  프로젝트 메인 소개글
+                </div>
+
+                <div class="Projects_project-description">
+                  <!-- 각 요소는 display : inline-block -->
+                  <div class="Projects_project-label">주요기능</div>
+                  <div class="Projects_project-value">
+                    로그인 / 로그아웃, 구독, 티셔츠 선택 및 제작, 주문 및
+                    배송조회, 장바구니, 구매후기, 회원정보
+                  </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <!-- 각 요소는 display : inline-block -->
+                  <div class="Projects_project-label">GitHub</div>
+                  <div class="Projects_project-value">
+                    <a
+                      class="Projects_url"
+                      href="https://github.com/guswns951230/test"
+                      >https://github.com/guswns951230/test</a
+                    >
+                  </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <!-- 각 요소는 display : inline-block -->
+                  <div class="Projects_project-label">URL</div>
+                  <div class="Projects_project-value">
+                    <a
+                      class="Projects_url"
+                      href="https://project-moti.netlify.app/"
+                      >https://project-moti.netlify.app/</a
+                    >
+                  </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <!-- 각 요소는 display : inline-block -->
+                  <div class="Projects_project-label">Frontend</div>
+                  <div class="Projects_project-value">
+                    frontend에 사용된 기술
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="Projects_project">
+            <div class="Projects_project-title">포트폴리오 웹사이트</div>
+            <div class="Projects_project-period">
+              2023.06
+              <span>(1人 개인 프로젝트)</span>
+            </div>
+            <div class="Projects_project-info">
+              <!-- display flex 적용 -->
+              <div class="Projects_project-img-wrapper">
+                <img
+                  class="Projects_project-img"
+                  src="images/project-main-img.png"
+                  alt=""
+                />
+              </div>
+              <div class="Projects_project-descriptions">
+                <div class="Projects_project-main-description">
+                  프로젝트 메인 소개글
+                </div>
+
+                <div class="Projects_project-description">
+                  <!-- 각 요소는 display : inline-block -->
+                  <div class="Projects_project-label">주요기능</div>
+                  <div class="Projects_project-value">
+                    간단한 자기소개, 인적 사항, 기술 스택, Github링크, 프로젝트
+                    소개
+                  </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <!-- 각 요소는 display : inline-block -->
+                  <div class="Projects_project-label">GitHub</div>
+                  <div class="Projects_project-value">
+                    <a
+                      class="Projects_url"
+                      href="https://github.com/guswns951230/My_portfolio_webpage"
+                      >https://github.com/guswns951230/My_portfolio_webpage</a
+                    >
+                  </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <!-- 각 요소는 display : inline-block -->
+                  <div class="Projects_project-label">URL</div>
+                  <div class="Projects_project-value">
+                    <a class="Projects_url" href="#">
+                      프로젝트 웹 페이지 url 삽입
+                    </a>
+                  </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <!-- 각 요소는 display : inline-block -->
+                  <div class="Projects_project-label">Frontend</div>
+                  <div class="Projects_project-value">
+                    frontend에 사용된 기술
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </article>
