--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               react <br />
               redux <br />
               ant design <br />
-              Mui
+              React Bootstrap <br />
             </div>
           </div>
 
@@ -235,7 +235,6 @@
               <span>(1人 개인 프로젝트)</span>
             </div>
             <div class="Projects_project-info">
-              <!-- display flex 적용 -->
               <div class="Projects_project-img-wrapper">
                 <img
                   class="Projects_project-img"
@@ -249,7 +248,6 @@
                 </div>
 
                 <div class="Projects_project-description">
-                  <!-- 각 요소는 display : inline-block -->
                   <div class="Projects_project-label">주요기능</div>
                   <div class="Projects_project-value">
                     요금 안내, 문의 방법, 오시는 길(naver 지도), 디자이너 안내,
@@ -258,7 +256,6 @@
                 </div>
 
                 <div class="Projects_project-description">
-                  <!-- 각 요소는 display : inline-block -->
                   <div class="Projects_project-label">GitHub</div>
                   <div class="Projects_project-value">
                     <a
@@ -270,7 +267,6 @@
                 </div>
 
                 <div class="Projects_project-description">
-                  <!-- 각 요소는 display : inline-block -->
                   <div class="Projects_project-label">URL</div>
                   <div class="Projects_project-value">
                     <a
@@ -282,11 +278,15 @@
                 </div>
 
                 <div class="Projects_project-description">
-                  <!-- 각 요소는 display : inline-block -->
                   <div class="Projects_project-label">Frontend</div>
                   <div class="Projects_project-value">
-                    frontend에 사용된 기술
+                    React, Redux, React Bootstrap, fontawesome, CSS
                   </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <div class="Projects_project-label">Deployment</div>
+                  <div class="Projects_project-value">Github-page</div>
                 </div>
               </div>
             </div>
@@ -299,7 +299,6 @@
               <span>(5人 팀 프로젝트)</span>
             </div>
             <div class="Projects_project-info">
-              <!-- display flex 적용 -->
               <div class="Projects_project-img-wrapper">
                 <img
                   class="Projects_project-img"
@@ -313,7 +312,6 @@
                 </div>
 
                 <div class="Projects_project-description">
-                  <!-- 각 요소는 display : inline-block -->
                   <div class="Projects_project-label">주요기능</div>
                   <div class="Projects_project-value">
                     로그인 / 로그아웃, 구독, 티셔츠 선택 및 제작, 주문 및
@@ -322,7 +320,6 @@
                 </div>
 
                 <div class="Projects_project-description">
-                  <!-- 각 요소는 display : inline-block -->
                   <div class="Projects_project-label">GitHub</div>
                   <div class="Projects_project-value">
                     <a
@@ -334,7 +331,6 @@
                 </div>
 
                 <div class="Projects_project-description">
-                  <!-- 각 요소는 display : inline-block -->
                   <div class="Projects_project-label">URL</div>
                   <div class="Projects_project-value">
                     <a
@@ -346,11 +342,15 @@
                 </div>
 
                 <div class="Projects_project-description">
-                  <!-- 각 요소는 display : inline-block -->
                   <div class="Projects_project-label">Frontend</div>
                   <div class="Projects_project-value">
-                    frontend에 사용된 기술
+                    React, Redux, axios, React Bootstrap, fontawesome, CSS
                   </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <div class="Projects_project-label">Deployment</div>
+                  <div class="Projects_project-value">Netlify</div>
                 </div>
               </div>
             </div>
@@ -363,7 +363,6 @@
               <span>(1人 개인 프로젝트)</span>
             </div>
             <div class="Projects_project-info">
-              <!-- display flex 적용 -->
               <div class="Projects_project-img-wrapper">
                 <img
                   class="Projects_project-img"
@@ -377,7 +376,6 @@
                 </div>
 
                 <div class="Projects_project-description">
-                  <!-- 각 요소는 display : inline-block -->
                   <div class="Projects_project-label">주요기능</div>
                   <div class="Projects_project-value">
                     간단한 자기소개, 인적 사항, 기술 스택, Github링크, 프로젝트
@@ -386,7 +384,6 @@
                 </div>
 
                 <div class="Projects_project-description">
-                  <!-- 각 요소는 display : inline-block -->
                   <div class="Projects_project-label">GitHub</div>
                   <div class="Projects_project-value">
                     <a
@@ -398,7 +395,6 @@
                 </div>
 
                 <div class="Projects_project-description">
-                  <!-- 각 요소는 display : inline-block -->
                   <div class="Projects_project-label">URL</div>
                   <div class="Projects_project-value">
                     <a class="Projects_url" href="#">
@@ -408,11 +404,15 @@
                 </div>
 
                 <div class="Projects_project-description">
-                  <!-- 각 요소는 display : inline-block -->
                   <div class="Projects_project-label">Frontend</div>
                   <div class="Projects_project-value">
-                    frontend에 사용된 기술
+                    HTML, CSS, JavaScript
                   </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <div class="Projects_project-label">Deployment</div>
+                  <div class="Projects_project-value">Github-page</div>
                 </div>
               </div>
             </div>
