--- a/index.html
+++ b/index.html
@@ -32,45 +32,48 @@
     <header id="nav">
       <div class="Nav_container">
         <div class="Nav_logo">
-          <i class="fas fa-meteor Nav_logo-icon">KHJ's Portfolio</i>
+          <i class="fas fa-meteor Nav_logo-icon">KHJ's PORTFOLIO</i>
         </div>
         <div class="Nav_navbar">
-          <div class="Navbar_menu aboutMe" data-link="#about-me">About me</div>
-          <div class="Navbar_menu skills" data-link="#skills">Skills</div>
-          <div class="Navbar_menu" data-link="#archiving">Archiving</div>
-          <div class="Navbar_menu" data-link="#projects">Projects</div>
+          <div class="Nav_menu aboutMe" data-link="#about-me">ABOUT ME</div>
+          <div class="Nav_menu skills" data-link="#skills">SKILLS</div>
+          <div class="Nav_menu" data-link="#archiving">ARCHIVING</div>
+          <div class="Nav_menu" data-link="#projects">PROJECTS</div>
         </div>
       </div>
     </header>
 
     <article id="home">
-      <img class="Home_img1" src="/images/homeimage2.png" alt="homeimage" />
-      <div class="Home_container">
+      <div class="Home_container Container">
         <div class="Home_avatar"></div>
 
         <div class="Home_title">
-          - 강현준 -
+          강현준
           <br />
           웹 개발자 포트폴리오
         </div>
-        <hr class="Home_divider" />
+        <!-- <hr class="Home_divider" /> -->
         <div class="Home_description">
-          안녕하세요.
-          <br />
+          <!-- 안녕하세요.
+          <br /> -->
           항상 도전하는 프론트엔드 웹 개발자입니다.
           <br />
           멈추지 않고 한걸음씩 나아가려는 성격이 저의 장점입니다.
         </div>
-        <div class="Home_nextbtn">더 알아보기 ↓</div>
-        <!-- 클릭 시 about me로 이동하는 이벤트 추가 -->
+        <div class="Home_nextbtn">더 알아보기</div>
+        <!-- 움직이는 이미지 -->
+        <!-- <div class="Home_img-wrapper">
+          <img class="Home_img" src="/images/homeimage2.png" alt="homeimage" />
+        </div> -->
       </div>
-      <!-- 밑으로 스크롤 시 화면 옅어지는 이벤트 추가하기 -->
     </article>
 
     <article id="about-me">
       <div class="AboutMe_container Container">
         <div class="SectionTitle AboutMe_title">
-          <div class="SectionTitle_text">ABOUT ME</div>
+          <div class="SectionTitle_text AboutMe_section-title-text">
+            ABOUT ME
+          </div>
         </div>
 
         <div class="AboutMe_infos">
@@ -159,30 +162,28 @@
 
         <div class="Skills_tech-stacks-container">
           <div class="Skills_tech-stacks">
-            <div class="Skills_stacks-title">Frontend</div>
-            <img src="" alt="" class="Skills_img" />
-            <div>
-              html css js <br />
-              react <br />
-              redux <br />
-              ant design <br />
-              React Bootstrap <br />
-            </div>
+            <div class="Skills_stacks-title">FRONTEND</div>
+
+            <img
+              src="/images/skills-frontend.png"
+              alt="skills frontend"
+              class="Skills_img"
+            />
           </div>
 
           <div class="Skills_tech-stacks">
-            <div class="Skills_stacks-title">Deployment</div>
-            <img src="" alt="" class="Skills_img" />
-            <div>
+            <div class="Skills_stacks-title">DEPLOYMENT</div>
+
+            <div class="Skills_img-wrapper">
               github-page <br />
               netlify
             </div>
           </div>
 
           <div class="Skills_tech-stacks">
-            <div class="Skills_stacks-title">Version Control</div>
-            <img src="" alt="" class="Skills_img" />
-            <div>
+            <div class="Skills_stacks-title">VERSION CONTROL</div>
+
+            <div class="Skills_img-wrapper">
               git <br />
               github
             </div>
@@ -432,7 +433,9 @@
       <div class="Footer_icons">
         <!-- 링크연결하기 -->
         <div class="Footer_icon-wrapper github">
-          <i class="fab fa-github Footer_icon"> </i>
+          <a href="https://github.com/guswns951230">
+            <i class="fab fa-github Footer_icon"> </i>
+          </a>
         </div>
 
         <div class="Footer_icon-wrapper discord">
