--- a/index.html
+++ b/index.html
@@ -512,6 +512,74 @@
               </div>
             </div>
           </div>
+
+          <div class="Projects_project">
+            <div class="Projects_project-title">Twitter 클론코딩 Kwitter</div>
+            <div class="Projects_project-period">
+              2023.06 ~ 2023.07
+              <span>(1人 개인 프로젝트)</span>
+            </div>
+            <div class="Projects_project-info">
+              <div class="Projects_project-img-wrapper">
+                <img
+                  class="Projects_project-img"
+                  src="images/project-main-img-sns.png"
+                  alt=""
+                />
+              </div>
+              <div class="Projects_project-descriptions">
+                <div class="Projects_project-main-description">
+                  프로젝트 메인 소개글
+                </div>
+
+                <div class="Projects_project-description">
+                  <div class="Projects_project-label">주요기능</div>
+                  <div class="Projects_project-value">
+                    로그인 / 로그아웃, 소셜로그인(google, github), 회원가입,
+                    프로필 수정, 게시물 작성 / 수정 / 삭제
+                  </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <div class="Projects_project-label">GitHub</div>
+                  <div class="Projects_project-value">
+                    <a
+                      class="Projects_url"
+                      href="https://github.com/guswns951230/SNS-service"
+                      >https://github.com/guswns951230/SNS-service</a
+                    >
+                  </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <div class="Projects_project-label">URL</div>
+                  <div class="Projects_project-value">
+                    <a
+                      class="Projects_url"
+                      href="https://guswns951230.github.io/SNS-service/"
+                    >
+                      https://guswns951230.github.io/SNS-service/
+                    </a>
+                  </div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <div class="Projects_project-label">Frontend</div>
+                  <div class="Projects_project-value">React, fontawesome</div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <div class="Projects_project-label">Database</div>
+                  <div class="Projects_project-value">firebase</div>
+                </div>
+
+                <div class="Projects_project-description">
+                  <div class="Projects_project-label">Deployment</div>
+                  <div class="Projects_project-value">Github-pages</div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </article>
