--- a/index.html
+++ b/index.html
@@ -339,7 +339,14 @@
               </div>
               <div class="Projects_project-descriptions">
                 <div class="Projects_project-main-description">
-                  프로젝트 메인 소개글
+                  <b
+                    >지인이 운영중인 헤어샵의 홈페이지를 목표로 제작한
+                    웹사이트</b
+                  >입니다. marcufali는 해당 헤어샵의 이름입니다. 제 분야로 주위
+                  사람들에게 도움이 되고 싶다는 마음으로 시작한 프로젝트입니다.
+                  <p></p>
+                  React를 사용한 첫 프로젝트로, React에 적응할 수 있게 된 계기가
+                  된 프로젝트 입니다.
                 </div>
 
                 <div class="Projects_project-description">
@@ -403,7 +410,20 @@
               </div>
               <div class="Projects_project-descriptions">
                 <div class="Projects_project-main-description">
-                  프로젝트 메인 소개글
+                  <b
+                    >사용자가 직접 원하는 디자인의 티셔츠를 제작할 수 있는 웹
+                    서비스</b
+                  >입니다. 'React활용 프론트엔드 개발자 양성과정' 교육기간 중
+                  진행한 5인 팀 프로젝트입니다.
+                  <p></p>
+                  React의 학습을 위해 React, Redux 등을 이용하여 개발하였습니다.
+                  처음으로 진행한 팀 프로젝트인 만큼 개발과정에서의 아쉬움도
+                  있지만, 팀원들과 소통하고 필요한 지식을 공유하며 학습하는
+                  의미있는 프로젝트였습니다.
+                  <p></p>
+                  기능구현에 대해 고민하며 팀원들과 여러 의견을 나누었고,
+                  canvas, slick slider등을 이용하여 필요한 기능들을
+                  구현했습니다.
                 </div>
 
                 <div class="Projects_project-description">
@@ -467,7 +487,11 @@
               </div>
               <div class="Projects_project-descriptions">
                 <div class="Projects_project-main-description">
-                  프로젝트 메인 소개글
+                  <b>포트폴리오 용도로 제작한 웹사이트입니다.</b> 지금 보고 있는
+                  이 웹사이트에 해당합니다.
+                  <p></p>
+                  HTML, CSS, JavaScript를 사용하여 만든 웹사이트로, 웹사이트의
+                  구조를 학습할 수 있었습니다.
                 </div>
 
                 <div class="Projects_project-description">
@@ -529,7 +553,17 @@
               </div>
               <div class="Projects_project-descriptions">
                 <div class="Projects_project-main-description">
-                  프로젝트 메인 소개글
+                  <b>간단한 게시글과 사진을 업로드 할 수 있는 웹 서비스</b
+                  >입니다. React와 Firebase를 학습하기 위한 목적으로
+                  제작하였습니다.
+                  <p></p>
+                  Firebase의 Authentication, Firestore, Storage등을 사용하여
+                  따로 서버를 개발하지 않고 Backend를 경험할 수 있었다는 점이 큰
+                  의미가 있었습니다. 앞으로도 이러한
+                  BaaS(Backend-as-a-Service)를 활용한 다양한 웹사이트 개발을
+                  목표로 잡게된 계기가 되었습니다.
+
+                  <p></p>
                 </div>
 
                 <div class="Projects_project-description">
