--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="Home_container Container">
         <div class="Home_avatar">
           <img
-            src="/images/home-avatar.png"
+            src="images/home-avatar.png"
             alt="avatar image"
             class="Home_avatar-img"
           />
@@ -160,7 +160,7 @@
                 <div class="Skills_tech-stack-wrapper">
                   <div class="Skills_tech-stack-img-wrapper">
                     <img
-                      src="/images/skills-html.png"
+                      src="images/skills-html.png"
                       alt="skill html"
                       class="Skills_tech-stack-img"
                     />
@@ -171,7 +171,7 @@
                 <div class="Skills_tech-stack-wrapper">
                   <div class="Skills_tech-stack-img-wrapper">
                     <img
-                      src="/images/skills-css.png"
+                      src="images/skills-css.png"
                       alt="skill css"
                       class="Skills_tech-stack-img"
                     />
@@ -182,7 +182,7 @@
                 <div class="Skills_tech-stack-wrapper">
                   <div class="Skills_tech-stack-img-wrapper">
                     <img
-                      src="/images/skills-js.png"
+                      src="images/skills-js.png"
                       alt="skills js"
                       class="Skills_tech-stack-img"
                     />
@@ -193,7 +193,7 @@
                 <div class="Skills_tech-stack-wrapper">
                   <div class="Skills_tech-stack-img-wrapper">
                     <img
-                      src="/images/skills-react.png"
+                      src="images/skills-react.png"
                       alt="skill react"
                       class="Skills_tech-stack-img"
                     />
@@ -204,7 +204,7 @@
                 <div class="Skills_tech-stack-wrapper">
                   <div class="Skills_tech-stack-img-wrapper">
                     <img
-                      src="/images/skills-redux.png"
+                      src="images/skills-redux.png"
                       alt="skill redux"
                       class="Skills_tech-stack-img"
                     />
@@ -215,7 +215,7 @@
                 <div class="Skills_tech-stack-wrapper">
                   <div class="Skills_tech-stack-img-wrapper">
                     <img
-                      src="/images/skills-bootstrap.png"
+                      src="images/skills-bootstrap.png"
                       alt="skill bootstrap"
                       class="Skills_tech-stack-img"
                     />
@@ -234,7 +234,7 @@
                 <div class="Skills_tech-stack-wrapper">
                   <div class="Skills_tech-stack-img-wrapper">
                     <img
-                      src="/images/skills-netlify.png"
+                      src="images/skills-netlify.png"
                       alt="skill netlify"
                       class="Skills_tech-stack-img"
                     />
@@ -262,7 +262,7 @@
                 <div class="Skills_tech-stack-wrapper">
                   <div class="Skills_tech-stack-img-wrapper">
                     <img
-                      src="/images/skills-git.png"
+                      src="images/skills-git.png"
                       alt="skill git"
                       class="Skills_tech-stack-img"
                     />
@@ -273,7 +273,7 @@
                 <div class="Skills_tech-stack-wrapper">
                   <div class="Skills_tech-stack-img-wrapper">
                     <img
-                      src="/images/skills-github.png"
+                      src="images/skills-github.png"
                       alt="skill github"
                       class="Skills_tech-stack-img"
                     />
@@ -298,7 +298,7 @@
             <div class="Archiving_img-wrapper">
               <img
                 class="Archiving_img"
-                src="/images/archiving-github.png"
+                src="images/archiving-github.png"
                 alt="github logo"
               />
             </div>
